Open modules in UT